# liber-trade

./: .env.example  .gitignore  Makefile  README.md  dfd1.md  docker-compose.yml
.kiro/specs/case-list-after-ingest/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/trade-document-ocr-json/: design.md  requirements.md  research.md  spec.json  (+1 more)
.kiro/steering/: product.md  structure.md  tech.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_initial_schema.py
backend/app/: main.py
backend/app/application/services/: document_input_preprocessor.py  json_normalization_service.py  text_correction_service.py
backend/app/application/usecases/: process_document_usecase.py
backend/app/controller/: document_ingest_controller.py
backend/app/domain/models/: document_result.py
backend/app/domain/services/: comparison_rule_resolver.py  consistency_checker.py  document_type_inference_service.py
backend/app/infrastructure/minio/: minio_storage_gateway.py
backend/app/infrastructure/ollama/: ollama_ocr_gateway.py
backend/app/infrastructure/persistence/: db_settings.py  orm_models.py  repository.py  sqlalchemy_session.py
backend/app/infrastructure/persistence/migrations/: 0001_initial.sql  0002_purchase_order_schema.sql
backend/tests/: test_api.py  test_ollama_gateway.py  test_preprocess_and_correction.py  test_services.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
(+8 files in other folders)
